# vepyr

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build.rs  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish_documentation.yml  release.yml  version-bump.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-supported-workflow-contract/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: index.html
architecture/: index.html
contact/: index.html
developers/: index.html
docs/: api.md  architecture.md  contact.md  developers.md  index.md  performance.md  plugins.md  quickstart.md  vep-comparison.md
e2e-testing/: README.md  vep-docker.md
e2e-testing/reports/: benchmark_report.md  issue88_remaining_unresolved.json  issue88_remaining_unresolved.md  mismatches_fjall_vs_vep.tsv  mismatches_fjall_vs_vep_classified.tsv  mismatches_parquet_vs_vep.tsv  mismatches_parquet_vs_vep_classified.tsv
e2e-testing/scripts/: classify_mismatches.py  extract_all_mismatches.py  run_annotation.py  run_annotation_fast.py  run_annotation_fast_all.py
full-genome-tests/reports/: benchmark_report.json  benchmark_report.md
full-genome-tests/scripts/: classify_mismatches.py  extract_all_mismatches.py  run_annotation.py
notebooks/: annotate.ipynb  build_cache.ipynb
performance/: index.html
plugins/: index.html
quickstart/: index.html
search/: search_index.json
src/: annotate.rs  convert.rs  core_fjall.rs  lib.rs  plugin_convert.rs  plugin_fjall.rs
src/vepyr/: __init__.py  _core.pyi  plugin_sources.py
tests/: __init__.py  _golden_suite.py  test_annotate.py  test_build_cache.py  test_build_cache_plugins.py  test_golden.py  test_golden_merged.py  test_golden_merged_per_gene.py  test_golden_merged_pick_allele.py  test_import.py  test_plugin_sources.py  test_register_extension.py  test_run_annotation_fast.py
tests/data/ensembl_cache/: sample.vcf
tests/data/ensembl_cache/22/: all_vars.gz.tbi
tests/data/golden/: golden.vcf  input.vcf  input.vcf.gz.tbi  prepare.py  reference.fa  reference.fa.fai
tests/data/golden_merged/: golden.vcf  prepare.py  prepare_pick_modes.py
tests/data/golden_merged_per_gene/: golden.vcf
tests/data/golden_merged_pick_allele/: golden.vcf
vep-comparison/: index.html
