[package]
name = "vepyr"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py310"] }

# Arrow interop between Rust and Python (PyArrow)
arrow = { version = "56", features = ["pyarrow"] }

# DataFusion for query execution
datafusion = "50.3.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
futures = "0.3"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
serde_json = "1"

# Upstream biodatageeks crates
datafusion-bio-function-vep = { git = "https://github.com/biodatageeks/datafusion-bio-functions.git", rev = "22c3a435fc0f1a14de646e81f8a9e2ae6f5c3045", features = ["cache-builder"] }
datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "7ccaa58" }
